<resources>
    <string name="app_name">Sample_Dnie_App</string>
    <string name="main_edit_message">http://lab9054.inv.uji.es/~paco/clave/</string>
    <string name="dialog_cert_selector_title">Source selector</string>
    <string name="dialog_cert_selector_message">Please, select how to athenticate</string>
    <string name="dialog_cert_selector_dnie">DNIe 3.0 (Spain)</string>
    <string name="dialog_cert_selector_cancel">Cancel</string>
    <string name="dialog_cert_selector_softCert">Digital certificate</string>

    <!-- Extracted from DNIeLectura -->
    <string name="dgt_text_1">CONSULTE SU \n SALDO DE PUNTOS</string>
    <string name="app_title_fnmt">DNIe Lectura</string>
    <string name="app_title_dgt">DNIe Lectura</string>
    <string name="app_title_nfc">DNIe Lectura: NFC</string>
    <string name="app_title_PKCS10">DNIe Lectura: GENERACION DE CLAVES</string>
    <string name="app_title_CAN">DNIe Lectura: SELECCIÓN DEL CAN</string>
    <string name="app_title_CONFIG">DNIe Lectura: CONFIGURACIÓN</string>
    <string name="app_title_HELP">DNIe Lectura: AYUDA</string>
    <string name="app_title_ERROR">DNIe Lectura: ERROR</string>
    <string name="label_private_initialize">Accediendo al DNIe</string>
    <string name="about">About</string>
    <string name="about_title">Acerca de …</string>
    <string name="about_version">Versión 1.0</string>
    <string name="about_author1">Dirección General de Policía</string>
    <string name="about_author2">Ministerio del Interior</string>
    <string name="about_author3">Gobierno de España</string>
    <string name="about_copyright">© 2015 DGP</string>
    <string name="about_derechos_reservados">Todos los derechos reservados</string>
    <string name="str_p12_nombre">Nombre </string>
    <string name="str_p12_det1">det1</string>
    <string name="str_p12_det2">det2</string>
    <string name="show_password_label">Mostrar PIN</string>
    <string name="enter_password">Introduzca PIN</string>
    <string name="info_connect">Introduzca DNIe en el lector USB, o bien aproxímelo a la antena NFC</string>
    <string name="info_name">Nombre</string>
    <string name="info_surname">Apellidos</string>
    <string name="info_dni">DNI</string>
    <string name="info_numdoc">Núm. documento</string>
    <string name="info_caducity">Caducidad</string>
    <string name="info_birth">Fecha nacim.</string>
    <string name="info_birth_place">Lugar nacim.</string>
    <string name="info_localidad">Localidad</string>
    <string name="info_provincia">Provincia</string>
    <string name="info_address">Dirección</string>
    <string name="info_country">País</string>
    <string name="info_mail_contacto">Email</string>
    <string name="info_fecha_actual">Fecha petición</string>
    <string name="info_titl_foto">FOTO</string>
    <string name="info_titl_firma">FIRMA</string>
    <string name="info_titl_sujeto">SUJETO DEL CERTIFICADO</string>
    <string name="info_titl_identificacion">DATOS DE IDENTIFICACIÓN</string>
    <string name="info_titl_contacto">DATOS DE CONTACTO</string>
    <string name="info_titl_datos">DATOS DEL CONTRATO</string>
    <string name="info_titl_configuracion">CONFIGURACIÓN</string>
    <string name="op_titular_nif">NIF</string>
    <string name="op_dgtinit">Aproxime DNIe al dispositivo</string>
    <string name="op_dgtinit2">Esperando DNIe...</string>
    <string name="op_reinit">Conexión perdida. Inténtelo de nuevo</string>
    <string name="op_menu1">Leer datos</string>
    <string name="op_menu2">Histórico</string>
    <string name="op_menu3">Ayuda</string>
    <string name="op_menu4">Configuración</string>
    <string name="str_img_menu">Operacion</string>
    <string name="str_logo_desc">DNI electrónico</string>
    <string name="str_generacion_correcta">El certificado se ha generado correctamente.</string>
    <string name="str_nfc_newtag">Nueva tarjeta DNIe encontrada</string>
    <string name="psswd_dialog_title">Introduzca contraseña</string>
    <string name="psswd_dialog_ok">Aceptar</string>
    <string name="psswd_dialog_cancel">Cancelar</string>
    <string name="psswd_dialog_show">Mostrar contraseña</string>
    <string name="psswd_dialog_email">Dirección de correo electrónico</string>
    <string name="process_title">DNIe versión 3.0</string>
    <string name="process_msg">Estableciendo conexión HTTPS...</string>
    <string name="psswd_dialog_hide">Ocultar contraseña</string>
    <string name="dni_password_msg">Introduzca PIN.</string>
    <string name="dni_password_msg_1_try">Introduzca PIN. Queda 1 reintento.</string>
    <string name="dni_password_msg_n_tries">Introduzca PIN. Quedan \s reintentos.</string>
    <string name="op_candescription">Introduzca el CAN de su documento de identidad.</string>
    <string name="op_candestruction">Se borrará el DNIe de la aplicación. \n¿Desea continuar?</string>
    <string name="op_canselection">Seleccione el CAN de su DNIe</string>
    <string name="op_cannewcan">Añadir nuevo DNIe</string>
    <string name="op_can_text1">Selección del CAN</string>
    <string name="op_can_text2">El CAN es el identificador que permite establecer la conexión con su DNIe. Aparece en la parte frontal del documento</string>
    <string name="psswd_dialog_can">Número CAN</string>
    <string name="result_ok">Operación correcta</string>
    <string name="result_ok_description">La operación se ha completado correctamente</string>
    <string name="result_nok_title">Error en la operación</string>
    <string name="result_nok_description">La operación no ha podido completarse correctamente</string>
    <string name="process_msg_lectura">Leyendo DNIe...</string>
    <string name="process_msg_dni">Accediendo al DNIe</string>
    <string name="title_dlg_newcan">Nuevo DNIe</string>
    <string name="help_pin">El PIN de usuario es el código de acceso a su DNIe. Sin él no se podrá realizar ninguna autenticación ni firma electrónica.</string>
    <string name="help_can">EL CAN es un identificador de 6 dígitos, necesario para establecer cualquier comunicación con su DNIe.</string>
    <string name="help_can_len">EL CAN debe tener una longitud de 6 dígitos</string>
    <string name="config_description">Seleccione la información que desea leer del documento.</string>
    <string name="config_readdg1">Datos públicos (nombre, apellidos...)</string>
    <string name="config_readdg11">Datos personales (direccion, etc.)</string>
    <string name="config_readdg2">Imagen facial</string>
    <string name="config_readdg7">Imagen de firma manuscrita</string>
    <string name="help_detail_load">Permite leer su documento DNI electrónico 3.0 ó Pasaporte, accediendo a la información pública.</string>
    <string name="help_detail_config">Opciones de configuración de la aplicación. Desde aquí puede elegir a qué datos públicos de su DNIe/Pasaporte desea acceder.</string>
    <string name="help_detail_help">Muestra esta pantalla de ayuda de la aplicación.</string>
    <string name="title_activity_read_crypto">ReadCrypto</string>
    <string name="action_settings">Settings</string>
</resources>
