<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ImageView
		android:id="@+id/bannerdgp"
		android:contentDescription="@string/str_logo_desc"
		android:src="@drawable/banner_dgp_red"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scaleType="centerCrop"
		android:adjustViewBounds="true"/>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="@drawable/fondo_opciones">

		<TextView
			android:id="@+id/configuration_description"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="90dp"
			android:layout_marginStart="50dp"
			android:layout_marginEnd="10dp"
			android:text="@string/config_description"
			android:textColor="#FFFFFF"
			android:textSize="18sp"/>

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:layout_marginStart="40dp"
			android:layout_marginEnd="20dp"
			android:layout_gravity="center"
			android:orientation="vertical"
			android:scrollbars="none">

			<CheckBox
				android:id="@+id/checkBoxDG1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dip"
				android:paddingStart="5dip"
				android:text="@string/config_readdg1"
				android:textColor="#FFFFFF"
				android:textSize="18sp"/>
			<CheckBox
				android:id="@+id/checkBoxDG11"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dip"
				android:paddingStart="5dip"
				android:text="@string/config_readdg11"
				android:textColor="#FFFFFF"
				android:textSize="18sp"/>
			<CheckBox
				android:id="@+id/checkBoxDG2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dip"
				android:paddingStart="5dip"
				android:text="@string/config_readdg2"
				android:textColor="#FFFFFF"
				android:textSize="18sp"/>
			<CheckBox
				android:id="@+id/checkBoxDG7"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="10dip"
				android:paddingStart="5dip"
				android:text="@string/config_readdg7"
				android:textColor="#FFFFFF"
				android:textSize="18sp"/>
		</LinearLayout>

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button
				android:id="@+id/butDataVolver"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="110dp"
				android:layout_height="110dp"
				android:background="@drawable/xmlopcion_w_volver"
				android:layout_marginBottom="60dp"
				android:layout_alignParentBottom="true"
				android:layout_alignParentStart="true" />

			<Button
				android:id="@+id/butDataLeer"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="120sp"
				android:layout_height="100sp"
				android:background="@drawable/xmlopcion_w_leerdatos"
				android:layout_alignParentBottom="true"
				android:layout_alignParentEnd="true" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>