<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<ImageView
		android:id="@+id/bannerdgp"
		android:contentDescription="@string/str_logo_desc"
		android:src="@drawable/banner_dgp_red"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scaleType="centerCrop"
		android:adjustViewBounds="true" />

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="@drawable/fondo_result2">

		<ImageView
			android:id="@+id/CITIZEN_data_tab_00"
			android:layout_width="90dip"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:layout_marginRight="10sp"
			android:padding="2dp"
			android:scaleType="centerCrop"
			android:adjustViewBounds="true"
			android:src="@drawable/noface"
			android:layout_alignParentTop="true"
			android:layout_alignParentEnd="true" />

		<ImageView
			android:id="@+id/CITIZEN_data_tab_00_FIRMA"
			android:visibility="invisible"
			android:layout_width="90dip"
			android:layout_height="wrap_content"
			android:layout_marginTop="10sp"
			android:padding="2dp"
			android:scaleType="centerCrop"
			android:adjustViewBounds="true"
			android:layout_below="@+id/CITIZEN_data_tab_00"
			android:layout_alignStart="@+id/CITIZEN_data_tab_00"/>

		<TableLayout
			android:id="@+id/data_table"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:stretchColumns="1"
			android:layout_alignParentTop="true"
			android:layout_alignParentStart="true"
			android:layout_marginTop="120dp"
			android:layout_marginStart="30dp">

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<TextView
					android:layout_span="2"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:padding="1dp"
					android:text="@string/info_titl_sujeto"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_01_title"
				   android:layout_width="match_parent"
				   android:layout_height="match_parent"
				   android:gravity="left"
				   android:padding="1dp"
				   android:layout_marginRight="3dp"
				   android:text="@string/info_name"
				   android:textAppearance="@style/TextAppearance.Baskerville.Small"
				   android:textStyle="bold" />

			   <TextView
				   android:id="@+id/CITIZEN_data_tab_01"
				   android:gravity="left"
				   android:layout_width="match_parent"
				   android:layout_height="match_parent"
				   android:padding="1dp"
				   android:textAppearance="@style/TextAppearance.Baskerville.Small" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
				   android:id="@+id/CITIZEN_data_tab_02_title"
				   android:layout_width="match_parent"
				   android:layout_height="match_parent"
				   android:gravity="left"
					android:layout_marginRight="3dp"
					android:padding="1dp"
				   android:text="@string/info_surname"
				   android:textAppearance="@style/TextAppearance.Baskerville.Small"
				   android:textStyle="bold" />

			   <TextView
				   android:id="@+id/CITIZEN_data_tab_02"
				   android:gravity="left"
				   android:layout_width="match_parent"
				   android:layout_height="match_parent"
				   android:padding="1dp"
				   android:textAppearance="@style/TextAppearance.Baskerville.Small" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_03_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:layout_marginRight="3dp"
					android:padding="1dp"
					android:text="@string/info_numdoc"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_03"
					android:gravity="left"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="1dp"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"/>
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_03_title_caducity"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:layout_marginRight="3dp"
					android:padding="1dp"
					android:text="@string/info_caducity"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_03_caducity"
					android:gravity="left"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="1dp"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"/>
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_07_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:padding="1dp"
					android:layout_marginRight="3dp"
					android:text="@string/info_birth"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_07"
					android:gravity="left"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="1dp"
					android:textAppearance="@style/TextAppearance.Baskerville.Small" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_08_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:layout_marginRight="3dp"
					android:padding="1dp"
					android:text="@string/info_birth_place"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_08"
					android:gravity="left"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="1dp"
					android:textAppearance="@style/TextAppearance.Baskerville.Small" />
			</TableRow>
		</TableLayout>

		<TableLayout
			android:id="@+id/data_table2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="12dp"
			android:stretchColumns="1"
			android:shrinkColumns="1"
			android:layout_below="@+id/data_table"
			android:layout_toEndOf="@+id/butVolver">
			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent">
				<TextView
					android:layout_span="2"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center"
					android:text="@string/info_titl_contacto"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_09_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:padding="1dp"
					android:layout_marginRight="3dp"
					android:text="@string/info_country"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_09"
					android:gravity="left"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:singleLine="false"
					android:maxLines="3"
					android:padding="1dp"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"/>
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_04_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:padding="1dp"
					android:layout_marginRight="3dp"
					android:text="@string/info_address"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_04"
					android:gravity="left"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:singleLine="false"
					android:maxLines="3"
					android:padding="1dp"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"/>
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_05_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:padding="1dp"
					android:layout_marginRight="3dp"
					android:text="@string/info_provincia"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_05"
					android:gravity="left"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="1dp"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"/>
			</TableRow>

			<TableRow
				android:layout_width="match_parent"
				android:layout_height="match_parent" >
				<TextView
					android:id="@+id/CITIZEN_data_tab_06_title"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="left"
					android:padding="1dp"
					android:layout_marginRight="3dp"
					android:text="@string/info_localidad"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/CITIZEN_data_tab_06"
					android:gravity="left"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:padding="1dp"
					android:textAppearance="@style/TextAppearance.Baskerville.Small"/>
			</TableRow>
		</TableLayout>

		<Button
			android:id="@+id/butVolver"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="110dp"
			android:layout_height="110dp"
			android:background="@drawable/xmlopcion_w_volver"
			android:layout_marginBottom="60dp"
			android:layout_alignParentBottom="true"
			android:layout_alignParentStart="true" />

		<Button
			android:id="@+id/butConfigurar"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="120sp"
			android:layout_height="120sp"
			android:background="@drawable/xmlopcion_w_config"
			android:layout_marginBottom="5dp"
			android:layout_marginRight="40dp"
			android:layout_alignParentBottom="true"
			android:layout_alignParentEnd="true" />
	</RelativeLayout>
</LinearLayout>