<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ImageView
        android:contentDescription="@string/str_logo_desc"
        android:src="@drawable/btn_w_anadirnuevodnie_pulsado"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/can_textview"
            android:layout_width="0dip"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:text="@string/op_candescription"
            android:textColor="#0A5D8D"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/helpButton"
            android:contentDescription="@string/str_logo_desc"
            android:background="@drawable/xmlboton_ayuda"
            android:layout_marginRight="20dip"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="right"
            android:gravity="right"/>
    </LinearLayout>

    <EditText
        android:id="@+id/can_editbox"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="20dip"
        android:scrollHorizontally="true"
        android:hint="@string/psswd_dialog_can"
        android:inputType="number"
        android:autoText="false"
        android:capitalize="none"
        android:singleLine="true"
        android:gravity="fill_horizontal"
        android:textColor="#0A5D8D"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
</LinearLayout>
